--- a/localite/public/index.html
+++ b/localite/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Localite!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/blue-logo.png" />
     <!--
